@@ -187,3 +187,4 @@ ATTR_pass_cpu_clock,
 ATTR_job_full_report_time,
 ATTR_copy_on_rerun,
 ATTR_job_exclusive_on_use,
+ATTR_disable_automatic_requeue,
